@@ -1,3 +1,7 @@
+drkns 08.10.2016 10:38:23 +0200 - build 4812
+
+1. Обход очередного бага VS.
+
 drkns 08.10.2016 02:27:23 +0200 - build 4811
 
 1. Продолжение 4810.2.
